fix categories alignment bug

--- a/src/components/Cards/CategoriesCard/Categories/Categories.module.css
+++ b/src/components/Cards/CategoriesCard/Categories/Categories.module.css
@@ -1,5 +1,7 @@
 .Categories {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+  display: flex;
+  justify-content: space-between;
 }
 .Categories span {
   margin-left: 77%;
